--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Cenik Lab
+title: Alperen Website
 
 # Short description of your site
 description: Translation Control and Functional Genomics
